crates/oxc_react_compiler/tests/snapshots/error.invalid-mutation-in-closure.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-mutation-in-closure.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("`options` cannot be modified"), span: Span { start: 124, end: 131 }, primary: false }], help: Some("Modifying component props or hook arguments is not allowed. Consider using a local variable instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: Cannot modify local variables after render completes", labels: [LabeledSpan { label: Some("This function may (indirectly) reassign or modify `options` after render"), span: Span { start: 158, end: 162 }, primary: false }, LabeledSpan { label: Some("This modifies `options`"), span: Span { start: 124, end: 131 }, primary: false }], help: Some("This argument is a function which may reassign or mutate `options` after render, which can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
