crates/oxc_react_compiler/tests/snapshots/error.invalid-nested-function-reassign-local-variable-in-effect.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-nested-function-reassign-local-variable-in-effect.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: Cannot reassign variable after render completes", labels: [LabeledSpan { label: Some("Cannot reassign `local` after render completes"), span: SourceSpan { offset: 230, length: 5 }, primary: false }], help: Some("Reassigning `local` after render has completed can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
