crates/oxc_react_compiler/tests/snapshots/error.invalid-no-alias-array-flat-map-callback-returns-reassigning-closure.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-no-alias-array-flat-map-callback-returns-reassigning-closure.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "Cannot reassign variable after render completes", labels: [LabeledSpan { label: Some("Cannot reassign `count` after render completes"), span: Span { start: 73, end: 78 }, primary: true }, LabeledSpan { label: Some("`count` is declared here"), span: Span { start: 29, end: 34 }, primary: false }], help: Some("Reassigning `count` after render has completed can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: Some("React Compiler skipped optimizing this component or hook"), severity: Error, code: OxcCode { scope: Some("react-compiler"), number: Some("Immutability") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/immutability") } }

No changes.
